[package]
name = "binary-visualization"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
webp = "0.2.6"
actix-web = "4"
actix-files = "0.6.2"
actix-multipart = "0.6.1"
futures-util = "0.3.29"
base64 = "0.21.5"
env_logger = "0.10.1"
actix-cors = "0.6.4"
dotenv = "0.15.0"
